k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysite
spec:
  replicas: 10
  selector:
    matchLabels:
      app: mysite
  template:
    metadata:
      labels:
        app: mysite
    spec:
      containers:
      - name: mysite
        image: henriquelr/meu-site-nginx:latest
        ports:
        - containerPort: 80
